--- a/sample-sigconf.tex
+++ b/sample-sigconf.tex
@@ -26,7 +26,15 @@
 \acmYear{1997}
 \copyrightyear{2016}
 
+
+\acmArticle{4}
 \acmPrice{15.00}
+
+% These commands are optional
+%\acmBooktitle{Transactions of the ACM Woodstock conference}
+\editor{Jennifer B. Sartor}
+\editor{Theo D'Hondt}
+\editor{Wolfgang De Meuter}
 
 
 \begin{document}
