--- a/README
+++ b/README
@@ -135,4 +135,6 @@ Version 1.43    Bug fixes
 Version 1.44    Bug fixes.
 		Empty DOI and ISBN suppress printing DOI or ISBN lines
 		Separated theorem code into acmthm.sty, loaded by defualt.
-		
+		Article number can be set for proceedings.
+		New commands: \acmBooktile, \editor.
+		Reference citation format updated.
