--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1630,7 +1630,7 @@
 %</gobble>
 %<class>\ProvidesClass{acmart}
 %<acmthm>\ProvidesPackage{acmthm}
-[2017/08/15 v1.45 Typesetting articles for Association of
+[2017/08/17 v1.46 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1697,6 +1697,8 @@ Computing Machinery]
 % \changes{v1.44}{2017/07/30}{Added package refcount}
 % \changes{v1.44}{2017/07/30}{Deleted package cleveref}
 % \changes{v1.44}{2017/07/30}{Put theorem defs in a separate style}
+% \changes{v1.46}{2017/08/17}{Bst file bug fixes: label width is
+% calculated correctly}
 %
 %
 % And the driver code:
