--- a/README
+++ b/README
@@ -145,4 +145,4 @@ Version 1.45    Workaround for a Libertine bug.  Thanks to LianTze Lim
 Version 1.46    Bug fixes for bibliography:  label width is now calculated
 		correctly.
 		All PACM now use screen option.  This requires etoolbox.
-		
+		Added subtitle to ACM reference format.		
