--- a/acmart.dtx
+++ b/acmart.dtx
@@ -129,6 +129,17 @@
 %\label{sec:ug}
 %
 %
+% The class uses many commands and customizaton options, so it might
+% appear intimidating for a casual user.  Do not panic!  Many of these
+% commands and options can be safely left with their default values,
+% or the values recommended by your conference or journal editors.  If
+% you have problems or questions, do not hesitate to ask me directly
+% or the community at \url{https://github.com/borisveytsman/acmart},
+% \url{https://tex.stackexchange.com} or the closest \TeX\ Users
+% Group.  The world-wide \TeX\ Users Group is at
+% \url{https://tug.org/}; please consider joining us if you use \TeX\
+% regularly.
+%
 %\subsection{Installation}
 %\label{sec:ug_install}
 %
@@ -740,23 +751,13 @@
 % It is expected that these commands are inserted by the author of the
 % manuscript.
 %
-% \DescribeMacro{\thanks}
-% Like \progname{amsart} (and unlike standard \LaTeX{}),
-% we allow |\thanks| only \emph{outside} of
-% commands |\title| and |\author|.  Example:
-% \begin{verbatim}
-% \thanks{This work is supported by the Widget Corporation Grant
-% \#312-001.\\
-% Author's address: D. Pineo, Kingsbury Hall, 33 Academic Way, Durham,
-% N.H. 03824; email: dspineo@comcast.net; Colin Ware, Jere A. Chase
-% Ocean Engineering Lab, 24 Colovos Road, Durham, NH 03824; email:
-% cware@ccom.unh.edu;
-% Sean Fogarty, (Current address) NASA Ames Research Center, Moffett
-% Field, California 94035.}
-% \end{verbatim}
-%
-% It is expected that this command is inserted by the author of the
-% manuscript.
+% \DescribeMacro{\thanks}%
+% Like \progname{amsart} (and unlike standard \LaTeX{}), we allow
+% |\thanks| only \emph{outside} of commands |\title| and |\author|.
+% This command is obsolete, and should \emph{not} be used in most
+% cases.  Do not list your acknowledgements and grant sponsors here:
+% put this information in the |acks| environment (see
+% Section~\ref{sec:ug_acks}).
 %
 % \DescribeMacro{\titlenote}%
 % \DescribeMacro{\subtitlenote}%
@@ -1636,7 +1637,7 @@
 %</gobble>
 %<class>\ProvidesClass{acmart}
 %<acmthm>\ProvidesPackage{acmthm}
-[2017/08/25 v1.46 Typesetting articles for Association of
+[2017/08/26 v1.46 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -3125,7 +3126,8 @@ Computing Machinery]
     Wearable and Ubiquitous Technologies}%  
   \def\@journalNameShort{Proc. ACM Interact. Mob. Wearable Ubiquitous Technol.}%
   \def\@permissionCodeOne{2474-9567}%
-  \global\@ACM@screentrue
+  \@ACM@screentrue
+  \PackageInfo{\@classname}{Using screen mode due to \@journalCode}%
 \or % JACM
   \def\@journalName{Journal of the ACM}%
   \def\@journalNameShort{J. ACM}%
@@ -3153,17 +3155,20 @@ Computing Machinery]
   \def\@journalName{Proceedings of the ACM on Human-Computer Interaction}%
   \def\@journalName{Proc. ACM Hum.-Comput. Interact.}%
   \def\@permissionCodeOne{2573-0142}%
-  \global\@ACM@screentrue
+  \@ACM@screentrue
+  \PackageInfo{\@classname}{Using screen mode due to \@journalCode}%
 \or % PACMPL
   \def\@journalName{Proceedings of the ACM on Programming Languages}%
   \def\@journalName{Proc. ACM Program. Lang.}%
   \def\@permissionCodeOne{2475-1421}%
-  \global\@ACM@screentrue
+  \@ACM@screentrue
+  \PackageInfo{\@classname}{Using screen mode due to \@journalCode}%
 \or % POMACS
   \def\@journalName{Proceedings of the ACM on Measurement and Analysis of Computing Systems}%
   \def\@journalName{Proc. ACM Meas. Anal. Comput. Syst.}%
   \def\@permissionCodeOne{2476-1249}%
-  \global\@ACM@screentrue
+  \@ACM@screentrue
+  \PackageInfo{\@classname}{Using screen mode due to \@journalCode}%
 \or % TAAS
   \def\@journalName{ACM Transactions on Autonomous and Adaptive Systems}%
   \def\@journalNameShort{ACM Trans. Autonom. Adapt. Syst.}%
