--- a/acmart.dtx
+++ b/acmart.dtx
@@ -101,6 +101,7 @@
 %  Michael D.~Adams,
 %  Leif Andersen, 
 %  Dirk Beyer,
+%  Benjamin Byholm,
 %  Michael Ekstrand,
 %  Matthew Fluet,
 %  Paolo G.~Giarrusso,
@@ -5369,6 +5370,8 @@ Computing Machinery]
 % \changes{v1.34}{2017/04/10}{Rulers now are continuous}
 % \changes{v1.40}{2017/05/27}{Work around a bug in xcolor: looks like
 % cmyk colors in boxes do not work}
+% \changes{v1.46}{2017/08/28}{Rearranged the code to get rid of
+% spurious underfull messages (Benjamin Byholm)}
 %   This is the box displayed in the review mode
 %    \begin{macrocode}
 \if@ACM@review
