--- a/sample-acmtog.tex
+++ b/sample-acmtog.tex
@@ -57,12 +57,14 @@
   \state{VA}
   \postcode{23185}
   \country{USA}}
+\email{gang_zhou@wm.edu}
 \author{Valerie B\'eranger}
 \affiliation{%
   \institution{Inria Paris-Rocquencourt}
   \city{Rocquencourt}
   \country{France}
 }
+\email{beranger@inria.fr}
 \author{Aparna Patel} 
 \affiliation{%
  \institution{Rajiv Gandhi University}
@@ -70,6 +72,7 @@
  \city{Doimukh} 
  \state{Arunachal Pradesh}
  \country{India}}
+\email{aprna_patel@rguhs.ac.in}
 \author{Huifen Chan}
 \affiliation{%
   \institution{Tsinghua University}
@@ -78,11 +81,13 @@
   \state{Beijing Shi}
   \country{China}
 }
+\email{chan0345@tsinghua.edu.cn}
 \author{Ting Yan}
 \affiliation{%
   \institution{Eaton Innovation Center}
   \city{Prague}
   \country{Czech Republic}}
+\email{yanting02@gmail.com}
 \author{Tian He}
 \affiliation{%
   \institution{University of Virginia}
@@ -95,6 +100,7 @@
 \affiliation{%
   \institution{University of Minnesota}
   \country{USA}}
+\email{tinghe@uva.edu}
 \author{Chengdu Huang}
 \author{John A. Stankovic}
 \author{Tarek F. Abdelzaher}
@@ -175,19 +181,6 @@ synchronization errors.
 multi-channel, radio interference, time synchronization}
 
 
-\thanks{This work is supported by the National Science Foundation,
-  under grant CNS-0435060, grant CCR-0325197 and grant EN-CS-0329609.
-
-  Authors' addresses: G.~Zhou, Computer Science Department, College of
-  William and Mary, 104 Jameson Rd, Williamsburg, PA 23185, US;
-  V.~B\'eranger, Inria Paris-Rocquencourt, Rocquencourt, France;
-  A.~Patel, Rajiv Gandhi University, Rono-Hills, Doimukh, Arunachal
-  Pradesh, India; H.~Chan, Tsinghua University, 30 Shuangqing Rd,
-  Haidian Qu, Beijing Shi, China; T.~Yan, Eaton Innovation Center,
-  Prague, Czech Republic; T.~He, C.~Huang, J.~A.~Stankovic University
-  of Virginia, School of Engineering Charlottesville, VA 22903, USA;
-  T. F. Abdelzaher, (Current address) NASA Ames Research Center,
-  Moffett Field, California 94035.}
 
 \maketitle
 
