--- a/sample-acmlarge.tex
+++ b/sample-acmlarge.tex
@@ -47,8 +47,10 @@
 % Title portion
 \title{A Multifrequency MAC Specially Designed for Wireless Sensor
   Network Applications} 
+\titlenote{We can add a note to the title}
 
 \author{Gang Zhou}
+\authornote{This is the corresponding author}
 \orcid{1234-5678-9012-3456}
 \affiliation{%
   \institution{College of William and Mary}
@@ -112,6 +114,8 @@
   \postcode{22903}
   \country{USA}
 }
+
+
 
 \begin{abstract}
 Multifrequency media access control has been well understood in
@@ -178,19 +182,19 @@ synchronization errors.
 \keywords{Wireless sensor networks, media access control,
 multi-channel, radio interference, time synchronization}
 
-
-\authorsaddresses{Authors' addresses: G.~Zhou, Computer Science
-  Department, College of William and Mary, 104 Jameson Rd,
-  Williamsburg, PA 23185, US, \path{gzhou@wm.edu}; V.~B\'eranger,
-  Inria Paris-Rocquencourt, Rocquencourt, France; A.~Patel, Rajiv
-  Gandhi University, Rono-Hills, Doimukh, Arunachal Pradesh, India;
-  H.~Chan, Tsinghua University, 30 Shuangqing Rd, Haidian Qu, Beijing
-  Shi, China; T.~Yan, Eaton Innovation Center, Prague, Czech Republic;
-  T.~He, C.~Huang, J.~A.~Stankovic University of Virginia, School of
-  Engineering Charlottesville, VA 22903, USA; T. F. Abdelzaher,
-  (Current address) NASA Ames Research Center, Moffett Field,
-  California 94035.}
-
+% DO NOT use this command unless you want to change
+% the default behavior
+% \authorsaddresses{Authors' addresses: G.~Zhou, Computer Science
+%   Department, College of William and Mary, 104 Jameson Rd,
+%   Williamsburg, PA 23185, US, \path{gzhou@wm.edu}; V.~B\'eranger,
+%   Inria Paris-Rocquencourt, Rocquencourt, France; A.~Patel, Rajiv
+%   Gandhi University, Rono-Hills, Doimukh, Arunachal Pradesh, India;
+%   H.~Chan, Tsinghua University, 30 Shuangqing Rd, Haidian Qu, Beijing
+%   Shi, China; T.~Yan, Eaton Innovation Center, Prague, Czech Republic;
+%   T.~He, C.~Huang, J.~A.~Stankovic University of Virginia, School of
+%   Engineering Charlottesville, VA 22903, USA; T. F. Abdelzaher,
+%   (Current address) NASA Ames Research Center, Moffett Field,
+%   California 94035.}
 
 \maketitle
 
