--- a/README
+++ b/README
@@ -146,7 +146,10 @@ Version 1.46    Bug fixes for bibliography:  label width is now calculated
 		correctly.
 		All PACM now use screen option.  This requires etoolbox.
 		Added subtitle to ACM reference format.
-		Now acmart is compatible with fontspec
+		Now acmart is compatible with fontspec.
 		\thanks is now obsolete.  The addresses are automatically
 		added to the journal version;  this can be overriden with
-		\authorsaddresses command
+		\authorsaddresses command.
+		Deleted the rule at the end of frontmatter for all formats.
+		Deleted new line before doi in the reference format.
+		
