Reintegrate theorem code into acmart.dtx
Proposed solution to #196

There are a number of disadvantages to a separate `acmthm.sty` file:
 * It is another file to manage when using a distribution that does
 not provide an up-to-date acmart package (e.g., Ubuntu 16.04 LTS).
 * Authors may use `acmthm=false` but never `\usepackage{acmthm}`,
 either through oversight or because they discover that it conflicts
 with their `\newtheorem{theorem}`; in either case, the author will
 not be using the `acmplain` `\theoremstyle`.

The original reason for factoring the theorem code into `acmthm.sty`
was to allow `cleveref` to be loaded before the theorem code,
addressing an issue where `cleveref` failed to use the correct
label (see https://github.com/borisveytsman/acmart/issues/138).  This
commit addresses that issue by delaying the definition of the theorem
environments until `\AtEndPreamble`, after `cleveref` has been
loaded.

--- a/README
+++ b/README
@@ -134,7 +134,7 @@ Version 1.43    Bug fixes
 
 Version 1.44    Bug fixes.
 		Empty DOI and ISBN suppress printing DOI or ISBN lines
-		Separated theorem code into acmthm.sty, loaded by defualt.
+		Separated theorem code into acmthm.sty, loaded by default.
 		Article number can be set for proceedings.
 		New commands: \acmBooktile, \editor.
 		Reference citation format updated.
@@ -152,4 +152,5 @@ Version 1.46    Bug fixes for bibliography:  label width is now calculated
 		\authorsaddresses command.
 		Deleted the rule at the end of frontmatter for all formats.
 		Deleted new line before doi in the reference format.
-		
+
+Version 1.47    Reintegrated theorem code into acmart.dtx.
