Fix bug in \@mkauthoraddresses

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -5277,7 +5277,7 @@ Computing Machinery]
   \bgroup
   \def\streetaddress##1{\unskip\@addpunct, ##1}%
   \def\postcode##1{\unskip\@addpunct, ##1}%
-  \def\position##1{\unskip\ignorespace}%
+  \def\position##1{\unskip\ignorespaces}%
   \def\institution##1{\unskip\@addpunct, ##1}%
   \def\city##1{\unskip\@addpunct, ##1}%
   \def\state##1{\unskip\@addpunct, ##1}%
