--- a/acmart.dtx
+++ b/acmart.dtx
@@ -4917,7 +4917,7 @@ Computing Machinery]
   \def\institution#1{\unskip~#1\ignorespaces}
   \def\city#1{\unskip\ignorespaces}
   \def\state#1{\unskip\ignorespaces}
-  \newcommand\department[2][0]{}
+  \newcommand\department[2][0]{\unskip\ignorespaces}
   \def\country#1{\if@ACM@affiliation@obeypunctuation\else, \fi#1\ignorespaces}
 \else
   \def\position#1{\if@ACM@affiliation@obeypunctuation#1\else#1\par\fi}%
