--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1722,6 +1722,7 @@ Computing Machinery]
 % calculated correctly}
 % \changes{v1.46}{2017/08/25}{Added etoolbox}
 % \changes{v1.46}{2017/08/29}{Restore theorem defs to class file}
+% \changes{v1.47}{2017/08/31}{New journal: THRI}
 %
 %
 % And the driver code:
