Fix various typos
1. Fix punctuation in a comment.

"% The default list of authors is too long for headers}"
	becomes
"% The default list of authors is too long for headers."

2. "ad hoc" -> "ad-hoc" for consistency.

3. Fix spelling of fictional Young Scientist's Support Program
                                         ^ The "i" was missing.

4. "matlab" -> "MATLAB" per the MathWorks spelling convention.

5. Fix author's name in sample text: it's "Akyildiz", not "Akuilidz".

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1368,8 +1368,8 @@
 %   Science Foundation of
 %   China}{https://doi.org/10.13039/501100001809} under Grant
 %   No.:~\grantnum{GS501100001809}{61273304}
-%   and~\grantnum[http://www.nnsf.cn/youngscientsts]{GS501100001809}{Young 
-%   Scientsts' Support Program}.
+%   and~\grantnum[http://www.nnsf.cn/youngscientists]{GS501100001809}{Young
+%   Scientists' Support Program}.
 % \end{acks}
 % \end{verbatim}
 % 
