--- a/sample-acmsmall.tex
+++ b/sample-acmsmall.tex
@@ -177,7 +177,7 @@ multi-channel, radio interference, time synchronization}
 
 \maketitle
 
-% The default list of authors is too long for headers}
+% The default list of authors is too long for headers.
 \renewcommand{\shortauthors}{G. Zhou et al.}
 
 \input{samplebody-journals}
