--- a/sample-sigchi-a.tex
+++ b/sample-sigchi-a.tex
@@ -75,7 +75,7 @@
   \city{Pretoria} \country{South Africa}}
 \email{author7@umbhaliu.ac.za} 
 
-% The default list of authors is too long for headers}
+% The default list of authors is too long for headers.
 \renewcommand{\shortauthors}{F. Author et al.}
 
 
