--- a/sample-sigconf.tex
+++ b/sample-sigconf.tex
@@ -118,7 +118,7 @@
 \affiliation{\institution{The Kumquat Consortium}}
 \email{jpkumquat@consortium.net}
 
-% The default list of authors is too long for headers}
+% The default list of authors is too long for headers.
 \renewcommand{\shortauthors}{B. Trovato et al.}
 
 
