--- a/sample-sigplan.tex
+++ b/sample-sigplan.tex
@@ -112,7 +112,7 @@
 \email{jpkumquat@consortium.net}
 
 
-% The default list of authors is too long for headers}
+% The default list of authors is too long for headers.
 \renewcommand{\shortauthors}{B. Trovato et al.}
 
 
