--- a/samplebody-conf.tex
+++ b/samplebody-conf.tex
@@ -370,7 +370,7 @@ code.
 
 \begin{acks}
   The authors would like to thank Dr. Yuhua Li for providing the
-  matlab code of  the \textit{BEPS} method. 
+  MATLAB code of the \textit{BEPS} method.
 
   The authors would also like to thank the anonymous referees for
   their valuable comments and helpful suggestions. The work is
@@ -378,7 +378,7 @@ code.
     Science Foundation of
     China}{http://dx.doi.org/10.13039/501100001809} under Grant
   No.:~\grantnum{GS501100001809}{61273304}
-  and~\grantnum[http://www.nnsf.cn/youngscientsts]{GS501100001809}{Young
-    Scientsts' Support Program}.
+  and~\grantnum[http://www.nnsf.cn/youngscientists]{GS501100001809}{Young
+    Scientists' Support Program}.
 
 \end{acks}
