--- a/samplebody-journals.tex
+++ b/samplebody-journals.tex
@@ -80,7 +80,7 @@ to avoid Hidden Terminal Problems in the 802.11 standard and
 protocols based on those similar to \cite{Akyildiz-01} and
 \cite{Adya-01}.} for frequency negotiation and reservation are not
 suitable for WSN applications, even though they exhibit good
-performance in general wireless ad hoc
+performance in general wireless ad-hoc
 networks.
 
 % Head 3
@@ -230,7 +230,7 @@ coalescing were made).
 
 \section{Performance Evaluation}
 
-During all the experiments, the Geographic Forwarding (GF) by Akuilidz
+During all the experiments, the Geographic Forwarding (GF) by Akyildiz
 et al.~\shortcite{Akyildiz-01} routing protocol is used. GF exploits
 geographic information of nodes and conducts local data-forwarding to
 achieve end-to-end routing. Our simulation is configured according to
@@ -373,8 +373,8 @@ The work is supported by the \grantsponsor{GS501100001809}{National
   Natural Science Foundation of
   China}{http://dx.doi.org/10.13039/501100001809} under Grant
 No.:~\grantnum{GS501100001809}{61273304\_a}
-and~\grantnum[http://www.nnsf.cn/youngscientsts]{GS501100001809}{Young
-  Scientsts' Support Program}.
+and~\grantnum[http://www.nnsf.cn/youngscientists]{GS501100001809}{Young
+  Scientists' Support Program}.
 
 
 \end{acks}
