--- a/acmart.dtx
+++ b/acmart.dtx
@@ -106,6 +106,7 @@
 %  Matthew Fluet,
 %  Paolo G.~Giarrusso,
 %  Ben Greenman,
+%  Jamie Davis,
 %  LianTze Lim,
 %  Ben Liblit,
 %  Kai Mindermann,
@@ -1651,7 +1652,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2017/08/31 v1.47 Typesetting articles for Association of
+[2017/09/09 v1.48 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1723,6 +1724,7 @@ Computing Machinery]
 % \changes{v1.46}{2017/08/25}{Added etoolbox}
 % \changes{v1.46}{2017/08/29}{Restore theorem defs to class file}
 % \changes{v1.47}{2017/08/31}{New journal: THRI}
+% \changes{v1.48}{2017/09/09}{Typos fixed (Jamie Davis)}
 %
 %
 % And the driver code:
