Make bibliography consistently formatted

--- a/acmart.bib
+++ b/acmart.bib
@@ -84,5 +84,5 @@
   author = 	 {David Carlisle},
   month = 	 oct,
   year = 	 2004,
-  note = 	  {\url{http://www.ctan.org/pkg/textcase}}}
-
+  note = 	 {\url{http://www.ctan.org/pkg/textcase}}
+}
