Fix missing argument to `\changes` command

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -4915,7 +4915,7 @@ Computing Machinery]
 % \changes{v1.33}{2017/03/28}{Added obeypunctuation code}
 % \changes{v1.40}{2017/05/27}{Fixed bugs with extra spaces}
 % \changes{v1.43}{2017/07/11}{Added comma before country for journals}
-% \changes{v1.46}{Corrected spacing for institution}
+% \changes{v1.46}{2017/08/30}{Corrected spacing for institution}
 %   Theoretically we can define the macros for \cs{affiliation} inside
 %   the \cs{@mkauthors}-style commands.  However, this would lead to a
 %   strange error if an author uses them outside \cs{affiliation}.  Of
